# connectedhomeip_SEALSQ

./: .gitmodules  README.md
examples/lighting-app/wisekey/vic292/esp32/: CMakeLists.txt
examples/lighting-app/wisekey/vic292/esp32/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
examples/lighting-app/wisekey/vic292/nrfconnect/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  pm_static_nrf52840dk_nrf52840.yml  pm_static_nrf52840dongle_nrf52840.yml  pm_static_nrf5340dk_nrf5340_cpuapp.yml  pm_static_nrf7002dk_nrf5340_cpuapp.yml  prj.conf  prj_release.conf  rpc.overlay  sysbuild.conf
examples/lighting-app/wisekey/vic292/nrfconnect/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
examples/lighting-app/wisekey/vic292/nrfconnect/main/: AppTask.cpp  ZclCallbacks.cpp  main.cpp
examples/lighting-app/wisekey/vic292/nrfconnect/main/include/: AppConfig.h  AppEvent.h  AppTask.h  CHIPProjectConfig.h
examples/lighting-app/wisekey/vic292/nrfconnect/sysbuild/ipc_radio/: prj.conf  prj_release.conf
examples/lighting-app/wisekey/vic292/nrfconnect/sysbuild/ipc_radio/boards/: nrf5340dk_nrf5340_cpunet.conf  nrf7002dk_nrf5340_cpunet.conf
examples/lighting-app/wisekey/vic292/nrfconnect/sysbuild/mcuboot/: prj.conf
examples/lighting-app/wisekey/vic292/nrfconnect/sysbuild/mcuboot/boards/: nrf52840dk_nrf52840.conf  nrf5340dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
examples/lighting-app/wisekey/vic292/raspberry/: BUILD.gn  args.gni
examples/platform/wisekey/doc/: CHANGES.TXT  README.md  vic292_esp32_matter.md  vic292_nrf_matter.md  vic292_rpi_matter.md
examples/platform/wisekey/vic292/esp32/: ESP32Vic292FactoryDataProvider.cpp  ESP32Vic292FactoryDataProvider.h
examples/platform/wisekey/vic292/nrfconnect/: NRFVic292FactoryDataProvider.cpp  NRFVic292FactoryDataProvider.h
examples/platform/wisekey/vic292/paa_certs_SealSQ/: ContosoMatterPAI_root.crt  ContosoMatterPAI_root.pem
examples/platform/wisekey/vic292/raspberry/: AppMain.cpp  BUILD.gn  DeviceAttestationVic292Creds.cpp  DeviceAttestationVic292Creds.h
examples/thermostat/wisekey/vic292/raspberry/: BUILD.gn  args.gni
scripts/: checkout_submodules.py
src/platform/wisekey/vic292/: README.txt  vaultic_matter.cpp  vaultic_matter.h  vaultic_matter_config.h  vaultic_matter_priv.h
src/platform/wisekey/vic292/esp32/vaultic_matter/: CMakeLists.txt  Kconfig
src/platform/wisekey/vic292/nrfconnect/: CMakeLists.txt  Kconfig.vic292
src/platform/wisekey/vic292/raspberry/: BUILD.gn  args.gni  wisekey_crypto.gni
