# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("${chip_root}/src/platform/wisekey/vic292/raspberry/args.gni")

static_library("VaultIC-Elib_292") {
    sources = [
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/arch/embedded/common/vaultic_mem.c",

        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/arch/embedded/raspberry/pi3/vaultic_control_driver.c",
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/arch/embedded/raspberry/pi3/vaultic_timer_delay.c",

        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/common/vaultic_command.c",
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/common/vaultic_crc16.c",
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/common/vaultic_utils.c",

        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/common/comms/vaultic_block_protocol.c",
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/common/comms/vaultic_comms.c",
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/common/comms/vaultic_protocol.c",

        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/device/vaultic_2XX_family/vaultic_api.c",

        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/arch/embedded/common/vaultic_twi_peripheral.c",
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/arch/embedded/raspberry/pi3/vaultic_twi_driver.c"
    ]

    sources += [
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/vaultic_matter.cpp"
    ]

    deps = [
        "${chip_root}/src/lib/support"
    ]

    defines = [
        "VLT_ENABLE_ISO7816=0",
        "VLT_ENABLE_SPI=0",
        "VLT_ENABLE_OWI=0",
        "VLT_ENABLE_SCP03=0",
        "HOST_CRYPTO=0",
        "VCC_CTRL_BY_GPIO",
        "RASPBERRY_PI",
        "TARGETCHIP_VAULTIC_292",
        "RPI_PRINT_ERRORS",
    ]

    cflags = [ "-g", "-fPIC", "-MMD", "-MP", "-MF" ]

    if(vic292_debug) {
        defines += [
            "_DEBUG",
            "VAULTIC_LOG_LEVEL=4",
            "TRACE_APDU",
            "TRACE_BLOCK_PTCL"
        ]

        cflags += [ "-g3", "-Wfatal-errors" ]
    } else {
        defines += [
            "VAULTIC_LOG_LEVEL=1",
        ]
    }

    include_dirs = [
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}",
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/common",
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/common/comms",
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/arch/embedded/common",
        "${chip_root}/src/platform/wisekey/${vic_crypto_impl}/${vic_elib_impl}/device/vaultic_2XX_family",
    ]

    cflags += [ "-Wconversion" ]

    output_name = "libvaultic292_matter"

    output_dir = "${root_out_dir}/lib"

    complete_static_lib = true
}
